--- a/src/components/ProjectCard/projectCard.style.css
+++ b/src/components/ProjectCard/projectCard.style.css
@@ -78,7 +78,7 @@ i {
 }
 .card {
   background-color: rgba(128, 128, 128, 0.719);
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
 }
 .card-img{
