--- a/src/components/pages/About/about.style.css
+++ b/src/components/pages/About/about.style.css
@@ -2,7 +2,8 @@
     opacity: 0.9;
   } */
 #about-info {
-  background-color: rgba(247, 247, 247, 0.904);
+  background-color:  rgba(51, 51, 51, 0.856);
+  color: white;
   width: 60%;
   height: 70%;
   margin-right: 80%;
@@ -29,9 +30,10 @@
   width: 100%;
   position: relative;
   text-align: center;
+  background-color: rgba(190, 190, 190, 0.904);
 }
 .logo:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 @media screen and (max-width: 990px) {
   #about-info {
@@ -67,6 +69,7 @@
   visibility: hidden;
   opacity: 0;
   width: 25px;
+  color:#6176ec;
 
   /* transition effect. not necessary */
   transition: opacity 0.2s, visibility 0.2s;
