--- a/src/components/pages/Contact/contact.style.css
+++ b/src/components/pages/Contact/contact.style.css
@@ -8,7 +8,8 @@
   padding-left: 25px;
   padding-bottom: 20px;
   padding-right: 25px;
-  background-color: white;
+  background-color:  rgba(51, 51, 51, 0.856);
+  color: white;
   max-width: 450px;
   min-width: 250px;
   opacity: 0.9;
