--- a/src/components/ScrollUp/scrollUp.style.css
+++ b/src/components/ScrollUp/scrollUp.style.css
@@ -1,43 +1,3 @@
-/* App {
-    text-align: center;
-    height: 5000px;
-  } */
-
-/* .scrollTop {
-    position: fixed; 
-    width: 100%;
-    bottom: 20px;
-    align-items: center;
-    height: 20px;
-    justify-content: center;
-    z-index: 1000;
-    cursor: pointer;
-    animation: fadeIn 0.3s;
-    transition: opacity 0.4s;
-    opacity: 0.5;
-  }
-  
-  .scrollTop:hover{
-    opacity: 1;
-  }
-  
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.5;
-    }
-  } */
-
-/* .react-icons{
-    height: 40;
-     display: flex;
-     text-align: right;
-     background-color: white;
-     color: white;
-  } */
-
 #up-scroll {
   position: fixed;
   margin-right: 50px;
@@ -48,6 +8,7 @@
   max-height: 75px;
   background-attachment: scroll;
   z-index: 2000;
+  background-color: violet;
 }
 @media all and (max-width: 768px) {
   #up-scroll {
